# wws-parser

./: README.md  pyproject.toml
wws_parser/: __main__.py  pyproject.toml
